# chatbot-rag

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/: documents.py  health.py  rag.py
app/config/: settings.py
app/database/: __init__.py  connection.py  models.py
app/db/: models.py  postgres.py
app/embeddings/: embedder.py
app/ingestion/: chunker.py  loader.py  parser.py
app/middleware/: error_handler.py  logger.py  rate_limiter.py
app/rag/: agent.py  generator.py  pipeline.py  prompt_builder.py  retriever.py
app/utils/: helpers.py
app/vectorstore/: vector_db.py
docker/: Dockerfile  docker-compose.yml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: build_index.py
static/: app.js  index.html  style.css
static/assets/: index-Bk3CeQCL.js  index-Dgk-Dk2C.css
tests/: test_agent.py  test_api.py  test_rag.py
tests/evaluation/: eval_dataset.json  generate_answers.py  ragas_eval.py
