[project]
name = "uit-academic-policies-chatbot"
version = "1.0.0"
description = "RAG chatbot for UIT academic regulations using FastAPI, FAISS, and HuggingFace LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    
    # RAG Orchestration
    "langchain>=0.3.45",
    "langchain-community>=0.3.45",
    "langchain-core>=0.3.45",
    "langchain-huggingface>=0.1.0",
    "langchain-text-splitters>=0.3.6",
    
    # HuggingFace & ML
    "huggingface-hub>=0.24.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.40.0",
    
    # Vector DB
    "faiss-cpu>=1.10.0",
    "rank-bm25>=0.2.2",
    "qdrant-client>=1.18.0",
    "langchain-qdrant>=1.1.0",
    
    # Document Parsing (PDF, OCR)
    "docling>=2.0.0",
    
    # Database, Cache & Agent & Observability
    "sqlalchemy>=2.0.0",
    "redis>=5.0.0",
    "langgraph>=0.1.0",
    "langfuse>=2.0.0",
    
    # Evaluation (RAGAS)
    "ragas>=0.2.0",
    "datasets>=2.21.0",
    "pandas>=2.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/build_index.py" = ["E402"]
"tests/evaluation/generate_answers.py" = ["E402"]
"app/ingestion/chunker.py" = ["E402"]
"tests/evaluation/ragas_eval.py" = ["E402"]
